# Pomegranate-2

./: CMakeLists.txt  LICENSE  README.md
assets/graphics/shaders/: shader.frag  shader.vert  shader1.vert
assets/graphics/shaders/opengl/: quad.frag  quad.vert  shader.frag  shader.vert
assets/scripts/: main.lua
assets/shaders/default2d/: fragment.glsl  vertex.glsl
assets/shaders/default3d/: fragment.glsl  vertex.glsl
assets/shaders/noise/: fragment.glsl  vertex.glsl
assets/shaders/tile_map/: fragment.glsl  vertex.glsl
modules/audio/: CMakeLists.txt  audio.h  core.cpp  core.h  sample.cpp  sample.h  stream.cpp  stream.h
modules/core/: CMakeLists.txt  asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  core.h  debug.cpp  debug.h  directory.cpp  directory.h  file.cpp  file.h  function.cpp  function.h  hash_table.h  list.h  pomegranate.h  range.cpp  range.h  reflectable.cpp  reflectable.h  resource.cpp  resource.h  serializable.cpp  serializable.h  string.cpp  string.h  table.cpp  table.h  thread_pool.h  type.cpp  type.h
modules/ecs/: CMakeLists.txt  archetype.cpp  archetype.h  component.cpp  component.h  core.cpp  core.h  core_impl.h  ecs.cpp  ecs.h  ecs_typedefs.h  entity.cpp  entity.h  group.cpp  group.h
modules/ecs/extensions/common/: CMakeLists.txt  color.cpp  color.h  common.h  hierarchy.cpp  hierarchy.h  name.cpp  name.h  transform2d.cpp  transform2d.h  transform3d.cpp  transform3d.h
modules/ecs/extensions/rendering/: CMakeLists.txt  camera3d.cpp  camera3d.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_instance.cpp  mesh_instance.h  rendering.h
modules/events/: CMakeLists.txt  event_manager.cpp  event_manager.h  event_typedefs.h  events.h  question_manager.cpp  question_manager.h
modules/graphics/glfw/: CMakeLists.txt  glad.c  graphics.h  graphics_core.cpp  graphics_core.h  model2d.cpp  model2d.h  model3d.cpp  model3d.h  pomegranate_image.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex2d.cpp  vertex2d.h  vertex3d.cpp  vertex3d.h  window.cpp  window.h
modules/graphics/opengl/: CMakeLists.txt  buffer.h  core.cpp  core.h  enumerations.cpp  enumerations.h  graphics.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  vertex2d.cpp  vertex2d.h  vertex3d.cpp  vertex3d.h  window.cpp  window.h
modules/graphics/vulkan/: CMakeLists.txt  buffer.h  core.cpp  core.h  enumerations.h  graphics.h  mesh3d.cpp  mesh3d.h  shader.cpp  shader.h  stb_image.h  uniform.cpp  uniform.h  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h  vertex2d.cpp  vertex2d.h  vertex3d.cpp  vertex3d.h  window.cpp  window.h
modules/input/: CMakeLists.txt  alias.cpp  alias.h  axis.cpp  axis.h  button.h  enumerations.cpp  enumerations.h  gamepad.cpp  gamepad.h  input.h  input_manager.cpp  input_manager.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
modules/lua/: CMakeLists.txt  debug.cpp  debug.h  ecs.cpp  ecs.h  events.cpp  events.h  lua_script.cpp  lua_script.h  lua_state.cpp  lua_state.h
modules/math/: CMakeLists.txt  math.h  matrix2x2.cpp  matrix2x2.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  noise1d.cpp  noise1d.h  noise2d.cpp  noise2d.h  pmath.h  random.cpp  random.h  rect.cpp  rect.h  vector2.cpp  vector2.h  vector2i.cpp  vector2i.h  vector3.cpp  vector3.h  vector3i.cpp  vector3i.h  vector4.cpp  vector4.h  vector4i.cpp  vector4i.h  vector_types.h
modules/math/geometry/: CMakeLists.txt  circle.cpp  circle.h  cube.cpp  cube.h  curve2d.cpp  curve2d.h  curve3d.cpp  curve3d.h  geometry.h  line2d.cpp  line2d.h  line3d.cpp  line3d.h  plane.cpp  plane.h  ray2d.cpp  ray2d.h  rectangle.cpp  rectangle.h  segment2d.cpp  segment2d.h  segment3d.cpp  segment3d.h  shape.cpp  shape.h  sphere.cpp  sphere.h  triangle2d.cpp  triangle2d.h  triangle3d.cpp  triangle3d.h
src/: main.cpp
src/components/: c_camera.cpp  c_camera.h  c_tile_map.cpp  c_tile_set.cpp  c_tile_set.h  c_transform.cpp  c_transform.h  tile.cpp  tile.h  tile_map.cpp  tile_map.h  tile_set.cpp  tile_set.h  transform.cpp  transform.h
src/systems/: s_camera.cpp  s_camera.h  s_tile_map.cpp  s_tile_map.h  tile_map.cpp  tile_map.h
